# collision-detection

./: CMakeLists.txt  LICENSE  README.md
include/: collision-area.hpp  shape.hpp
include/algorithms/: rasterization.hpp
include/collision-detection/: collision-area.hpp  shape.hpp
include/collision-detection/algorithms/: rasterization.hpp
include/core/: point.hpp  vector.hpp
include/types/: common.hpp
src/: main.cpp
src/include/: point.hpp  shape.hpp  solid.hpp  vector.hpp
test/: CMakeLists.txt  main.cpp
